# liquers-wasm

./: Cargo.toml  README.md
examples/simple_call/: index.html  run.py
src/: lib.rs
tests/: wasm.rs
