[package]
name = "liquers-wasm"
version = "0.1.0"
authors = ["Orest Dubay <orest3.dubay@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1"
wasm-bindgen = "0.2"

console_error_panic_hook = { version = "0.1", optional = true }

serde = "1.0"
serde_derive = "1.0"

serde_json = "1.0"
serde_yaml = "0.8"

lazy_static = "1.4"

[dependencies.liquers-core]
path = "../liquers-core"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
